feat: actualizat frontend + backend osutapatruzecisitrei

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,91 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/icons/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LegeaAplicata-PROFFESIONAL</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="ro">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/src/assets/icons/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI</title>
+  <meta name="title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <meta name="description"
+    content="Platformă profesională de cercetare juridică cu AI pentru avocați, jurisconsulți și studenți. Căutare avansată în jurisprudență română, hotărâri judecătorești și legislație. Versiune offline 100% confidențială disponibilă." />
+  <meta name="keywords"
+    content="cercetare juridică, AI juridic, jurisprudență România, hotărâri judecătorești, legislație română, avocat, jurisconsult, căutare juridică, offline legal AI, inteligență artificială juridică, cod civil, cod penal" />
+  <meta name="author" content="LegeaAplicata" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="language" content="Romanian" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="theme-color" content="#1e3a8a" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://chat.legeaaplicata.ro" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chat.legeaaplicata.ro" />
+  <meta property="og:title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <meta property="og:description"
+    content="Cercetare juridică avansată cu inteligență artificială. Accesează jurisprudență română, hotărâri judecătorești și legislație. Versiune offline 100% confidențială pentru profesioniști în drept." />
+  <meta property="og:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
+  <meta property="og:site_name" content="LegeaAplicata" />
+  <meta property="og:locale" content="ro_RO" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://chat.legeaaplicata.ro" />
+  <meta name="twitter:title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <meta name="twitter:description"
+    content="Cercetare juridică avansată cu AI. Jurisprudență română, hotărâri judecătorești, legislație. 100% offline și confidențial." />
+  <meta name="twitter:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="LegeaAplicata" />
+  <meta name="format-detection" content="telephone=no" />
+
+  <!-- Structured Data - Organization & WebApplication -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "LegeaAplicata",
+      "alternateName": "LegeaAplicata Professional",
+      "url": "https://chat.legeaaplicata.ro",
+      "applicationCategory": "LegalService",
+      "operatingSystem": "Web, Windows, macOS, Linux",
+      "description": "Platformă profesională de cercetare juridică cu inteligență artificială pentru avocați, jurisconsulți și studenți. Căutare avansată în jurisprudență română, hotărâri judecătorești și legislație.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "RON",
+        "availability": "https://schema.org/InStock"
+      },
+      "featureList": [
+        "Căutare avansată în jurisprudență română",
+        "Filtrare inteligentă după materie juridică",
+        "Detectare automată prevederi legale",
+        "Generare documente juridice",
+        "Calcul automat taxe judiciare",
+        "Versiune offline 100% confidențială"
+      ],
+      "browserRequirements": "Requires JavaScript. Requires HTML5.",
+      "softwareVersion": "2.0",
+      "inLanguage": "ro",
+      "creator": {
+        "@type": "Organization",
+        "name": "LegeaAplicata",
+        "url": "https://chat.legeaaplicata.ro"
+      }
+    }
+    </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
