--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,14 +10,35 @@
   <title>LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI</title>
   <meta name="title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
   <meta name="description"
-    content="Platformă profesională de cercetare juridică cu AI pentru avocați, jurisconsulți și studenți. Căutare avansată în jurisprudență română, hotărâri judecătorești și legislație. Versiune offline 100% confidențială disponibilă." />
+    content="Platformă profesională de cercetare juridică cu inteligență artificială pentru avocați, jurisconsulți și studenți. Căutare avansată în jurisprudență română, hotărâri ICCJ, CEDO, legislație actualizată și Monitorul Oficial. Versiune offline 100% confidențială, analiză jurisprudență, monitoring dosare, bonitate societăți comerciale." />
   <meta name="keywords"
-    content="cercetare juridică, AI juridic, jurisprudență România, hotărâri judecătorești, legislație română, avocat, jurisconsult, căutare juridică, offline legal AI, inteligență artificială juridică, cod civil, cod penal" />
-  <meta name="author" content="LegeaAplicata" />
+    content="cercetare juridică, AI juridic, jurisprudență România, hotărâri judecătorești, legislație română, avocat, jurisconsult, căutare juridică, offline legal AI, inteligență artificială juridică, cod civil, cod penal, hotărâri ICCJ, jurisprudență CEDO, monitorul oficial, cercetare drept, legislație actualizată, analiza comparativa jurisprudenta, monitoring dosare instanta, bonitate societati comerciale, drept civil, drept penal, drept comercial, drept administrativ, drept constitutional, practică judiciară, decizie instanță, bază de date jurisprudență" />
+  <meta name="author" content="LegeaAplicata - Adrian Nicolau" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="language" content="Romanian" />
+  <meta name="content-language" content="ro-RO" />
+  <meta http-equiv="content-language" content="ro-RO" />
   <meta name="revisit-after" content="7 days" />
   <meta name="theme-color" content="#1e3a8a" />
+  <meta name="rating" content="general" />
+  <meta name="referrer" content="no-referrer-when-downgrade" />
+  <meta name="format-detection" content="telephone=no" />
+
+  <!-- Geo Tags -->
+  <meta name="geo.region" content="RO" />
+  <meta name="geo.placename" content="România" />
+  <meta name="geo.position" content="45.9432;24.9668" />
+  <meta name="ICBM" content="45.9432, 24.9668" />
+
+  <!-- Apple Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="LegeaAplicata" />
+
+  <!-- Microsoft Tags -->
+  <meta name="msapplication-TileColor" content="#1e3a8a" />
+  <meta name="msapplication-TileImage" content="/src/assets/icons/logo.png" />
+  <meta name="msapplication-config" content="/browserconfig.xml" />
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://chat.legeaaplicata.ro" />
@@ -34,6 +55,132 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <meta name="twitter:description"
+    content="Cercetare juridică avansată cu inteligență artificială. Jurisprudență română, hotărâri ICCJ, CEDO și legislație actualizată." />
+  <meta name="twitter:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
+  <meta name="twitter:site" content="@LegeaAplicata" />
+
+  <!-- Structured Data - Organization -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://chat.legeaaplicata.ro/#organization",
+      "name": "LegeaAplicata",
+      "legalName": "LegeaAplicata - Platformă de Cercetare Juridică",
+      "url": "https://chat.legeaaplicata.ro",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
+        "width": "512",
+        "height": "512"
+      },
+      "foundingDate": "2024",
+      "founder": {
+        "@type": "Person",
+        "name": "Adrian Nicolau",
+        "jobTitle": "Fondator & dezvoltator",
+        "description": "Avocat și specialist IT specializat în soluții juridice cu inteligență artificială"
+      },
+      "description": "Platformă profesională de cercetare juridică cu inteligență artificială pentru profesioniști în drept",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "RO",
+        "addressRegion": "România"
+      },
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "telephone": "+40-751-661-066",
+        "contactType": "customer support",
+        "email": "adrian@legeaaplicata.ro",
+        "availableLanguage": ["ro", "en"]
+      }],
+      "sameAs": [
+        "https://www.facebook.com/LegeaAplicata",
+        "https://www.linkedin.com/company/legeaaplicata"
+      ]
+    }
+  </script>
+
+  <!-- Structured Data - WebSite with SearchAction -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "@id": "https://chat.legeaaplicata.ro/#website",
+      "url": "https://chat.legeaaplicata.ro",
+      "name": "LegeaAplicata",
+      "description": "Platformă profesională de cercetare juridică cu AI - Jurisprudență română, hotărâri judecătorești, legislație actualizată",
+      "publisher": {
+        "@id": "https://chat.legeaaplicata.ro/#organization"
+      },
+      "inLanguage": "ro-RO",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://chat.legeaaplicata.ro/?q={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
+
+  <!-- Structured Data - LegalService -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "serviceType": "LegalService",
+      "name": "LegeaAplicata - Servicii de Cercetare Juridică",
+      "url": "https://chat.legeaaplicata.ro",
+      "logo": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
+      "image": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
+      "description": "Platformă profesională de cercetare juridică cu inteligență artificială. Oferim căutare avansată în jurisprudență română, analiză comparativă de hotărâri judecătorești, monitoring dosare instanță și verificare bonitate societăți comerciale.",
+      "provider": {
+        "@id": "https://chat.legeaaplicata.ro/#organization"
+      },
+      "areaServed": {
+        "@type": "Country",
+        "name": "România"
+      },
+      "availableLanguage": "ro",
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Servicii LegeaAplicata",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Analiză Comparativă Jurisprudență",
+              "description": "Căutare avansată și analiză comparativă în baza de date de jurisprudență română cu AI"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Monitoring Dosare Instanță",
+              "description": "Urmărire automată a dosarelor judiciare și notificări actualizări"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Verificare Bonitate Societăți",
+              "description": "Analiză bonitate financiară și juridică a societăților comerciale"
+            }
+          }
+        ]
+      },
+      "priceRange": "Gratuit - Abonament Premium"
+    }
+  </script>
+
+  <!-- Structured Data - WebApplication -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -52,22 +199,26 @@
       },
       "featureList": [
         "Căutare avansată în jurisprudență română",
+        "Analiză comparativă hotărâri judecătorești",
         "Filtrare inteligentă după materie juridică",
         "Detectare automată prevederi legale",
+        "Monitoring dosare instanță",
+        "Verificare bonitate societăți comerciale",
         "Generare documente juridice",
-        "Calcul automat taxe judiciare",
-        "Versiune offline 100% confidențială"
+        "Calcul automat taxe judiciare și timbru judiciar",
+        "Versiune offline 100% confidențială",
+        "Știri juridice actualizate",
+        "Evenimente și conferințe juridice",
+        "Bază de date profesioniști în drept"
       ],
       "browserRequirements": "Requires JavaScript. Requires HTML5.",
       "softwareVersion": "2.0",
       "inLanguage": "ro",
       "creator": {
-        "@type": "Organization",
-        "name": "LegeaAplicata",
-        "url": "https://chat.legeaaplicata.ro"
+        "@id": "https://chat.legeaaplicata.ro/#organization"
       }
     }
-    </script>
+  </script>
 </head>
 
 <body>
