feat: actualizat frontend + backend patrusutesaptezecisi opt

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,7 @@
   <meta name="ICBM" content="45.9432, 24.9668" />
 
   <!-- Apple Meta Tags -->
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="LegeaAplicata" />
