feat: actualizat frontend + backend patrusuteoptzecisi sase

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
 
   <!-- Primary Meta Tags -->
-  <title>LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI</title>
-  <meta name="title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <title>Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI</title>
+  <meta name="title" content="Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI" />
   <meta name="description"
     content="Platformă profesională de cercetare juridică cu inteligență artificială pentru avocați, jurisconsulți și studenți. Căutare avansată în jurisprudență română, hotărâri ICCJ, CEDO, legislație actualizată și Monitorul Oficial. Versiune offline 100% confidențială, analiză jurisprudență, monitoring dosare, bonitate societăți comerciale." />
   <meta name="keywords"
     content="cercetare juridică, AI juridic, jurisprudență România, hotărâri judecătorești, legislație română, avocat, jurisconsult, căutare juridică, offline legal AI, inteligență artificială juridică, cod civil, cod penal, hotărâri ICCJ, jurisprudență CEDO, monitorul oficial, cercetare drept, legislație actualizată, analiza comparativa jurisprudenta, monitoring dosare instanta, bonitate societati comerciale, drept civil, drept penal, drept comercial, drept administrativ, drept constitutional, practică judiciară, decizie instanță, bază de date jurisprudență" />
-  <meta name="author" content="LegeaAplicata - Adrian Nicolau" />
+  <meta name="author" content="Legea Aplicata - Adrian Nicolau" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="language" content="Romanian" />
   <meta name="content-language" content="ro-RO" />
@@ -47,16 +47,16 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://chat.legeaaplicata.ro" />
-  <meta property="og:title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <meta property="og:title" content="Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI" />
   <meta property="og:description"
     content="Cercetare juridică avansată cu inteligență artificială. Accesează jurisprudență română, hotărâri judecătorești și legislație. Versiune offline 100% confidențială pentru profesioniști în drept." />
   <meta property="og:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
-  <meta property="og:site_name" content="LegeaAplicata" />
+  <meta property="og:site_name" content="Legea Aplicata" />
   <meta property="og:locale" content="ro_RO" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="LegeaAplicata - Platformă Profesională de Cercetare Juridică cu AI" />
+  <meta name="twitter:title" content="Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI" />
   <meta name="twitter:description"
     content="Cercetare juridică avansată cu inteligență artificială. Jurisprudență română, hotărâri ICCJ, CEDO și legislație actualizată." />
   <meta name="twitter:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
@@ -68,8 +68,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "@id": "https://chat.legeaaplicata.ro/#organization",
-      "name": "LegeaAplicata",
-      "legalName": "LegeaAplicata - Platformă de Cercetare Juridică",
+      "name": "Legea Aplicata",
+      "legalName": "Legea Aplicata - Platformă de Cercetare Juridică",
       "url": "https://chat.legeaaplicata.ro",
       "logo": {
         "@type": "ImageObject",
@@ -111,7 +111,8 @@
       "@type": "WebSite",
       "@id": "https://chat.legeaaplicata.ro/#website",
       "url": "https://chat.legeaaplicata.ro",
-      "name": "LegeaAplicata",
+      "name": "Legea Aplicata",
+      "alternateName": ["LegeaAplicata", "LegeaAplicata.ro"],
       "description": "Platformă profesională de cercetare juridică cu AI - Jurisprudență română, hotărâri judecătorești, legislație actualizată",
       "publisher": {
         "@id": "https://chat.legeaaplicata.ro/#organization"
@@ -128,13 +129,72 @@
     }
   </script>
 
+  <!-- Structured Data - SiteNavigationElement -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "SiteNavigationElement",
+          "position": 1,
+          "name": "Codul Civil",
+          "description": "Codul Civil Actualizat - Legislație",
+          "url": "https://chat.legeaaplicata.ro/codul-civil"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 2,
+          "name": "Codul Penal",
+          "description": "Codul Penal Actualizat - Legislație",
+          "url": "https://chat.legeaaplicata.ro/codul-penal"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 3,
+          "name": "Procedură Civilă",
+          "description": "Codul de Procedură Civilă",
+          "url": "https://chat.legeaaplicata.ro/codul-de-procedura-civila"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 4,
+          "name": "Procedură Penală",
+          "description": "Codul de Procedură Penală",
+          "url": "https://chat.legeaaplicata.ro/codul-de-procedura-penala"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 5,
+          "name": "Codul Muncii",
+          "description": "Legislația Muncii Actualizată",
+          "url": "https://chat.legeaaplicata.ro/codul-muncii"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 6,
+          "name": "Știri Drept Civil",
+          "description": "Articole și Noutăți Drept Civil",
+          "url": "https://chat.legeaaplicata.ro/stiri/drept-civil-si-administrativ"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 7,
+          "name": "Știri Drept Penal",
+          "description": "Articole și Noutăți Drept Penal",
+          "url": "https://chat.legeaaplicata.ro/stiri/drept-penal"
+        }
+      ]
+    }
+  </script>
+
   <!-- Structured Data - LegalService -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "serviceType": "LegalService",
-      "name": "LegeaAplicata - Servicii de Cercetare Juridică",
+      "name": "Legea Aplicata - Servicii de Cercetare Juridică",
       "url": "https://chat.legeaaplicata.ro",
       "logo": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
       "image": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
@@ -186,8 +246,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "LegeaAplicata",
-      "alternateName": "LegeaAplicata Professional",
+      "name": "Legea Aplicata",
+      "alternateName": "Legea Aplicata Professional",
       "url": "https://chat.legeaaplicata.ro",
       "applicationCategory": "LegalService",
       "operatingSystem": "Web, Windows, macOS, Linux",
