feat: actualizat frontend + backend patrusuteoptzecisi noua

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
         "@type": "Person",
         "name": "Adrian Nicolau",
         "jobTitle": "Fondator & dezvoltator",
-        "description": "Avocat și specialist IT specializat în soluții juridice cu inteligență artificială"
+        "description": "Jurist și specialist IT specializat în soluții juridice cu inteligență artificială"
       },
       "description": "Platformă profesională de cercetare juridică cu inteligență artificială pentru profesioniști în drept",
       "address": {
