feat: actualizat frontend + backend cincisutezecisi sapte

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/src/assets/icons/logo.png" />
+  <link rel="icon" type="image/x-icon" href="/src/assets/icons/favicon.ico" />
+  <link rel="icon" type="image/webp" href="/src/assets/icons/logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
 
   <!-- Primary Meta Tags -->
@@ -38,7 +39,7 @@
 
   <!-- Microsoft Tags -->
   <meta name="msapplication-TileColor" content="#1e3a8a" />
-  <meta name="msapplication-TileImage" content="/src/assets/icons/logo.png" />
+  <meta name="msapplication-TileImage" content="/src/assets/icons/logo.webp" />
   <meta name="msapplication-config" content="/browserconfig.xml" />
 
   <!-- Canonical URL -->
@@ -50,7 +51,7 @@
   <meta property="og:title" content="Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI" />
   <meta property="og:description"
     content="Cercetare juridică avansată cu inteligență artificială. Accesează jurisprudență română, hotărâri judecătorești și legislație. Versiune offline 100% confidențială pentru profesioniști în drept." />
-  <meta property="og:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
+  <meta property="og:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.webp" />
   <meta property="og:site_name" content="Legea Aplicata" />
   <meta property="og:locale" content="ro_RO" />
 
@@ -59,7 +60,7 @@
   <meta name="twitter:title" content="Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI" />
   <meta name="twitter:description"
     content="Cercetare juridică avansată cu inteligență artificială. Jurisprudență română, hotărâri ICCJ, CEDO și legislație actualizată." />
-  <meta name="twitter:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.png" />
+  <meta name="twitter:image" content="https://chat.legeaaplicata.ro/src/assets/icons/logo.webp" />
   <meta name="twitter:site" content="@LegeaAplicata" />
 
   <!-- Structured Data - Organization -->
@@ -73,9 +74,9 @@
       "url": "https://chat.legeaaplicata.ro",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
-        "width": "512",
-        "height": "512"
+        "url": "https://chat.legeaaplicata.ro/src/assets/icons/logo.webp",
+        "width": "400",
+        "height": "314"
       },
       "foundingDate": "2024",
       "founder": {
@@ -196,8 +197,8 @@
       "serviceType": "LegalService",
       "name": "Legea Aplicata - Servicii de Cercetare Juridică",
       "url": "https://chat.legeaaplicata.ro",
-      "logo": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
-      "image": "https://chat.legeaaplicata.ro/src/assets/icons/logo.png",
+      "logo": "https://chat.legeaaplicata.ro/src/assets/icons/logo.webp",
+      "image": "https://chat.legeaaplicata.ro/src/assets/icons/logo.webp",
       "description": "Platformă profesională de cercetare juridică cu inteligență artificială. Oferim căutare avansată în jurisprudență română, analiză comparativă de hotărâri judecătorești, monitoring dosare instanță și verificare bonitate societăți comerciale.",
       "provider": {
         "@id": "https://chat.legeaaplicata.ro/#organization"
