--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,10 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Source+Serif+4:opsz,wght@8..60..200;8..60..400;8..60..600;8..60..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60..200;8..60..400;8..60..600;8..60..700&display=swap"
+    rel="stylesheet">
 
   <!-- Primary Meta Tags -->
   <title>Legea Aplicata - Platformă Profesională de Cercetare Juridică cu AI</title>
